--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,7 +13,7 @@ galaxy_info:
     - name: SUSE
       versions:
         - all
-    - name: CentOS
+    - name: EL
       versions:
         - all
 
