--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,7 +13,19 @@ galaxy_info:
     - name: EL
       versions:
         - all
+    - name: Debian
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
+    - name: opensuse
+      versions:
+        - all
     - name: SUSE
+      versions:
+        - all
+    - name: Ubuntu
       versions:
         - all
 
