tasks/main.yml: replace hardcoded transactional-update command with community.general.zypper, that works with transactional-update now

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,9 +8,9 @@
   when: 'ansible_distribution != "openSUSE MicroOS"'
 
 - name: "Install packages on openSUSE MicroOS using transactional-update"
-  ansible.builtin.command:
-  args:
-    cmd: '/usr/sbin/transactional-update --non-interactive pkg install {{ packages_to_be_installed | join(" ") }}'
+  community.general.zypper:
+    name: "{{ packages_to_be_installed }}"
+    state: "present"
   when: 'ansible_distribution == "openSUSE MicroOS"'
   notify:
     - 'Reboot'
