tasks/main.yml: use multi-line syntax for when conditions

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,13 +5,15 @@
   ansible.builtin.package:
     name: "{{ packages_to_be_installed }}"
     state: "present"
-  when: 'ansible_distribution != "openSUSE MicroOS"'
+  when:
+    - 'ansible_distribution != "openSUSE MicroOS"'
 
 - name: "Install packages on openSUSE MicroOS using transactional-update"
   community.general.zypper:
     name: "{{ packages_to_be_installed }}"
     state: "present"
-  when: 'ansible_distribution == "openSUSE MicroOS"'
+  when:
+    - 'ansible_distribution == "openSUSE MicroOS"'
   notify:
     - 'Reboot'
     - 'Wait for the machine(s) to be ready again'
