--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
     state: "present"
   when:
     - 'ansible_distribution != "openSUSE MicroOS"'
+    - 'ansible_distribution != "openSUSE Leap Micro"'
 
 - name: "Install packages on openSUSE MicroOS using transactional-update"
   community.general.zypper:
